--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,6 +1,8 @@
+@import "header-colors";
+
 .header {
     padding: 20px;
     margin: 20px;
-    background: antiquewhite;
-
+    background: var(--header-background);
 }
+
