--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,3 +1,1 @@
-:root{--primary: red;--secondarty: papayawhip}*{box-sizing:border-box}body{font-family:sans-serif;color:var(--primary);background:black}.mb-20{margin-bottom:20px}.fit-picture{display:flex;align-items:stretch;justify-items:stretch;width:1000px}.box{border:black;background:white transparent 70%}
-
-/*# sourceMappingURL=styles.css.map */
+:root{--primary: red;--secondarty: papayawhip}*{box-sizing:border-box}body{font-family:sans-serif;color:var(--primary);background:black}.mb-20{margin-bottom:20px}.fit-picture{display:flex;align-items:stretch;justify-items:stretch;width:1000px}.box{border:black;background:antiquewhite transparent 70%}
