--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,10 +1,14 @@
 * {
-    box-sizing:border-box;
+    box-sizing: border-box;
 }
 
 body{
     font-family: sans-serif;
     color: var(--primary);
-    background: black;
+    margin: 0;
+    padding: 0;
+    background: url(/images/start.jpg);
+    background-size: cover;
 }
+
 
