--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -6,19 +6,21 @@
 .box {
   width: 450px;
   background: rgba (0, 0, 0, 0.4);
-  opacity: 85%;
+  opacity: 75%;
   padding: 40px;
   text-align: center;
   margin: auto;
   margin-top: 5%;
   color: white;
-
+  background: black;
 }
+
 
 .box-img {
   border-radius: 50%;
   width: 200px;
   height: 200px;
+  opacity: none;
 }
 
 .box h1{
@@ -34,7 +36,7 @@ font-weight: 100;
 }
 
 .box p {
-  text-align: justify;
+  text-align: center;
 }
 
 ul{
@@ -53,3 +55,4 @@ list-style: none;
   text-decoration: none;
   font-size: 60px;
 }
+
